fix postgre config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # = POSTGRE
 # ===============================
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/
+#spring.datasource.url= jdbc:postgresql://localhost:5432/
+spring.datasource.url= ${JDBC_DATABASE_URL:}
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-update
