--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
           <artifactId>postgresql</artifactId>
           <version>9.4.1212</version>
       </dependency>
+      <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+          <version>2.6.0</version>
+      </dependency>
   </dependencies>
 
     <repositories>
