--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 # ===============================
 # = POSTGRE
 # ===============================
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=SPRING_DATASOURCE_URL
+spring.datasource.username=SPRING_DATASOURCE_USERNAME
+spring.datasource.password=SPRING_DATASOURCE_PASSWORD
 #spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-update
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 # ===============================
 # = MYSQL CONFIG
 # ===============================
