--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 # ===============================
 
 #spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-update
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
