--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,14 @@
 
 #spring.jpa.show-sql=false
 #spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-update
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 # ===============================
 # = MYSQL CONFIG
 # ===============================
@@ -24,7 +25,7 @@ spring.datasource.removeAbandoned=true
 # ===============================
 # = JPA / HIBERNATE#
 # ===============================
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
