--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,25 @@
           <artifactId>HikariCP</artifactId>
           <version>2.6.0</version>
       </dependency>
+      <!-- Swagger-->
+      <dependency>
+          <groupId>io.springfox</groupId>
+          <artifactId>springfox-swagger-ui</artifactId>
+          <version>2.2.2</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>io.springfox</groupId>
+          <artifactId>springfox-swagger2</artifactId>
+          <version>2.2.2</version>
+          <scope>compile</scope>
+      </dependency>
+      <!-- h2 -->
+      <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>1.4.193</version>
+      </dependency>
   </dependencies>
 
     <repositories>
