--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@
 #spring.jpa.show-sql=false
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-update
 # ===============================
 # = MYSQL CONFIG
 # ===============================
