--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,6 @@
           <artifactId>spring-boot-starter-data-jpa</artifactId>
       </dependency>
       <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <scope>runtime</scope>
-      </dependency>
-      <dependency>
           <groupId>com.jayway.jsonpath</groupId>
           <artifactId>json-path</artifactId>
           <scope>test</scope>
@@ -85,12 +80,13 @@
           <version>2.2.2</version>
           <scope>compile</scope>
       </dependency>
-      <!-- h2 -->
-      <!--dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <version>1.4.193</version>
-      </dependency-->
+      <!-- Lombok -->
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.16.18</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 
     <repositories>
@@ -125,27 +121,4 @@
           </plugin>
         </plugins>
     </build>
-  <!-- Package as an executable jar -->
-
-  <!--build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-
-    <repositories>
-        <repository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </pluginRepository>
-    </pluginRepositories-->
 </project>
