--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,43 +2,13 @@
 # = POSTGRE
 # ===============================
 
-#spring.jpa.show-sql=false
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-update
-# ===============================
-# = MYSQL CONFIG
-# ===============================
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql = true
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:5000/pelotero
-#spring.datasource.username=root
+#spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
 #spring.datasource.password=root
 
-
-# ===============================
-# = JPA / HIBERNATE#
-# ===============================
-#spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-#spring.datasource.tomcat.max-wait=20000
-#spring.datasource.tomcat.max-active=50
-#spring.datasource.tomcat.max-idle=20
-#spring.datasource.tomcat.min-idle=15
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-#spring.jpa.properties.hibernate.id.new_generator_mappings = false
-#spring.jpa.properties.hibernate.format_sql = true
-
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#spring.datasource.tomcat.test-on-borrow=true
