Agrego la direccion dentro de cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.show-sql = true
 #spring.datasource.username=postgres
 #spring.datasource.password=root
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
