--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql = true
 
 #spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
