--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-update
 spring.jpa.show-sql = true
 
 #spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
@@ -14,3 +14,9 @@ spring.jpa.show-sql = true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+# ===============================
+# = UPLOAD FILES
+# ===============================
+spring.http.multipart.max-file-size=128KB
+spring.http.multipart.max-request-size=128KB
